; ModuleID = '/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-data.c_do_delete_friend_request.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/friend/extr_friend-data.c_do_delete_friend_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_del_friend = type { i32 }

@LEV_FR_DEL_FRIENDREQ = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @do_delete_friend_request(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.lev_del_friend*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i64 @conv_uid(i32 %7)
  %9 = icmp slt i64 %8, 0
  br i1 %9, label %13, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = icmp sle i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %10, %2
  store i32 -1, i32* %3, align 4
  br label %25

14:                                               ; preds = %10
  %15 = load i32, i32* @LEV_FR_DEL_FRIENDREQ, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call %struct.lev_del_friend* @alloc_log_event(i32 %15, i32 12, i32 %16)
  store %struct.lev_del_friend* %17, %struct.lev_del_friend** %6, align 8
  %18 = load i32, i32* %5, align 4
  %19 = load %struct.lev_del_friend*, %struct.lev_del_friend** %6, align 8
  %20 = getelementptr inbounds %struct.lev_del_friend, %struct.lev_del_friend* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load i32, i32* %4, align 4
  %22 = call i32 @get_user(i32 %21)
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @delete_friend_request(i32 %22, i32 %23)
  store i32 %24, i32* %3, align 4
  br label %25

25:                                               ; preds = %14, %13
  %26 = load i32, i32* %3, align 4
  ret i32 %26
}

declare dso_local i64 @conv_uid(i32) #1

declare dso_local %struct.lev_del_friend* @alloc_log_event(i32, i32, i32) #1

declare dso_local i32 @delete_friend_request(i32, i32) #1

declare dso_local i32 @get_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
